# frontcamera

./: CMakeLists.txt  manifest.json.in
app/: CMakeLists.txt  FrontCamera.desktop.in  FrontCamera.qml
app/tests/autopilot/: run
app/tests/autopilot/FrontCamera/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/FrontCamera/: backend.cpp  backend.h  cameraselector.cpp  cameraselector.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: frontcamera.liu-xiao-guo.pot
